--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.25.4
   cloud_firestore: ^4.15.5
   firebase_auth: ^4.17.4
+  hooks_riverpod: ^2.4.10
 
 dev_dependencies:
   flutter_test:
