--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,14 +31,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   firebase_core: ^2.25.4
   cloud_firestore: ^4.15.5
   firebase_auth: ^4.17.4
   hooks_riverpod: ^2.4.10
+  google_fonts: ^6.1.0
+  mockito: ^5.4.4
+  network_image_mock: ^2.1.1
 
 dev_dependencies:
   flutter_test:
