--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   mockito: ^5.4.4
   network_image_mock: ^2.1.1
   flutter_hooks: ^0.20.5
+  mocktail: ^1.0.3
 
 dev_dependencies:
   flutter_test:
