Character saving completed, character builder controller test cases

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_hooks: ^0.20.5
   http: ^1.2.0
   flutter_svg_provider: ^1.0.7
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
